--- a/src/styles/critical.css
+++ b/src/styles/critical.css
@@ -448,8 +448,7 @@ ul[role="list"], ol[role="list"] { list-style: none; padding: 0; }
 }
 .hero-wrapper:not(.hero-wrapper--transparent-mode) {
     background: var(--color-gray-900);
-    overflow: hidden;
-    margin-bottom: -1.5rem;
+    border-radius: var(--border-radius-hero) var(--border-radius-hero) 0 0;
 }
 .hero-wrapper--transparent-mode {
     background: var(--color-cta);
